docs/1.16/prisma-graphql-api/index.mdx
import Collapse from 'components/Markdown/Collapse'

export const meta = {
  title: 'Prisma GraphQL API',
  position: 5
}

## Use Prisma GraphQL API

Every Prisma service exposes a GraphQL API with CRUD and realtime operations for the types defined in the service's datamodel. This API is called the **Prisma API**.

The GraphQL schema defining the types and operations of the Prisma API is referred to as the **Prisma GraphQL schema**. It is automatically generated by Prisma.

<Collapse title="Try out the Prisma API in a GrapQL Playground">

Click [**here**](https://eu1.prisma.sh/running-examples/hello-world/dev) to explore a Prisma API in a GraphQL Playground.


The Prisma API is based on the following [datamodel](knul):

```graphql
type Post {
  id: ID! @unique
  createdAt: DateTime!
  updatedAt: DateTime!
  isPublished: Boolean! @default(value: "false")
  title: String!
  text: String!
  author: User!
}

type User {
  id: ID! @unique
  email: String! @unique
  password: String!
  name: String!
  posts: [Post!]!
}
```

</Collapse>


This chapter explains everything you need to know about the Prisma API and how it can be used in various contexts.

---

### API Reference

| Page | Description |
| -- | --- |
| [**Using the Prisma API**](nms2) | Learn about various ways to consume the Prisma API using plain HTTP (e.g. `curl` and `fetch`). |
| [**Authentication**](ghd4) | Learn how to protect your Prisma API using the service secret. |
| [**Concepts**](vw4d) | Learn about the most important API concepts such as batching, Relay connections, transactions, cascading deletes, ... 
| [**Queries**](qwe1) | Learn about the auto-generated queries in the Prisma API. |
| [**Mutations**](qwe2) | Learn about the auto-generated mutations in the Prisma API. |
| [**Subscriptions**](qwe3) | Learn about the auto-generated subscriptions in the Prisma API. |
| [**Error Handling**](pdfv) | Learn how Prisma deals with errors in API requests. |

### Prisma Bindings

| Page | Description |
| -- | --- |
| [**Overview**](wer1)| Learn the mental model of Prisma bindings |
| [**API**](lel2)| Learn about the API exposed by Prisma bindings |
| [**Code Generation**](frr1)| Learn how to do code generation using the `prisma-binding` generator CLI |
| [**Forwarding to Prisma**](onq1)| Learn how to directly forward operations to Prisma in your resolvers |

